--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "less-loader": "^10.2.0",
     "pinia": "^2.0.11",
     "vue": "^3.2.25",
-    "vue-router": "4"
+    "vue-router": "4",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.0.0",
