--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "vue-router": "4"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.13",
+    "@types/three": "^0.137.0",
     "@vitejs/plugin-vue": "^2.0.0",
+    "three": "^0.137.5",
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
     "vue-tsc": "^0.29.8"
