--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@types/node": "^17.0.13",
+    "animate.css": "^4.1.1",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "pinia": "^2.0.11",
