--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "animate.css": "^4.1.1",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
+    "lru-cache": "^7.3.1",
     "pinia": "^2.0.11",
     "vue": "^3.2.25",
     "vue-router": "4",
