--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "@types/node": "^17.0.13",
     "animate.css": "^4.1.1",
+    "axios": "^0.26.0",
+    "axios-retry": "^3.2.4",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "lru-cache": "^7.3.1",
