--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "three": "^0.137.5",
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
-    "vue-tsc": "^0.29.8"
+    "vue-tsc": "^0.29.8",
+    "vuepress": "^1.9.7"
   }
 }
